<resources>
    <string name="app_name">Cannabis Automatico</string>
    <string name="titulo_email">Correo eletronico</string>
    <string name="titulo_password">Contraseña</string>
    <string name="btn_iniciar">Iniciar Sesion</string>
    <string name="btn_inicia">Inicia Sesion</string>
    <string name="btn_registrar"> Registrar </string>
    <string name="btn_olvide_contraseña"> Recuperar </string>
    <string name="recuperar_password"> Recuperar\npassword? </string>
    <string name="indicacion_correo"> Escribe tu Email para recuperar </string>
    <string name="titulo_recuperar"> Recupera tu password </string>
    <string name="nombre"> Nombre </string>
    <string name="apellido"> Apellido </string>
    <string name="codigo">Cod_Adm</string>
    <string name="imagen">imagen</string>
    <string name="textoR"> Si no te has registrado hazlo aqui </string>
    <string name="codigoActivar"> Activar codigo </string>

    <string name="ejemplo_nombre"> Nombre : Arturo </string>
    <string name="ejemplo_apellido"> Apellido : Perez </string>
    <string name="ejemplo_email">  Email : Arturo@gmail.com </string>
    <string name="ejemplo_password"> Contraseña : Arturo.. </string>
    <string name="titulo_registrar"> Registrar </string>
    <string name="titulo_login"> Iniciar Sesion </string>

    <string name="titulo_app">Cannabis</string>

    <string name="sensor_Temp"> TEMPERATURA </string>
    <string name="sensor_Humed"> HUMEDAD AMBIENTE</string>
    <string name="sensor_Luz"> LUZ </string>
    <string name="sensor_Ph"> PH </string>
    <string name="Info_sensores">Sensores</string>
    <string name="configuracion"> Configuracion </string>
    <string name="Habilitar_Desh"> Habilitar / Deshabilitar </string>

    <string name="Conexion_luetooth"> Activar / Desconectar </string>
    <string name="info_sensor"> Informacion </string>

    <string name="Ajustes"> Ajustes </string>
    <string name="hechar_agua"> Agua </string>
    <string name="subir_luz"> Luz </string>
    <string name="encender_luz"> Encender </string>
    <string name="reducir_luz"> Intencidad </string>
    <string name="Modo_M"> Modo manual </string>
    <string name="Modo_A"> Modo Automatico </string>
    <string name="TIEMPO"> Datos en tiempo real </string>
    <string name="modos"> Modo </string>
    <string name="dato1"> Dato ideal </string>
    <string name="dato2"> Dato actual </string>


    <string name="Codigoo"> Codigo </string>
    <string name="codigoEjem"> Ejemplo: CA-0... </string>
    <string name="boton_codigo"> Validar </string>

    <string name="btn_mas_opciones"> Mas opciones </string>
    <string name="Historial"> Historial </string>
    <string name="Calendario"> Calendario </string>
    <string name="numeroH"> # </string>
    <string name="horaH"> Hora </string>
    <string name="fechaH"> Fecha </string>
    <string name="accionesH"> Acciones </string>
    <string name="nodata"> NO HAY DATOS </string>

    <string name="titulo_i"> # </string>
    <string name="titulo_h"> HORA </string>
    <string name="titulo_f"> FECHA </string>

    <string name="benvenido"> Bienvenido! </string>
    <string name="Invernadero_titulo"> Mis invernaderos </string>

    --Menu--
    <string name="Ajuste"> Ajustes </string>
    <string name="sesion"> Cerrar Sesion </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_cerrar_sesion">No cerrar sesion</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="cuenta">Cuenta</string>


    <string name="contenido">
    <h3>Te damos la bienvenida a CannabisAutomaticoApp,</h3> <br>
    tu nueva cuenta ha sido creada. </br>
    Aquí encontrarás algunas sugerencias para comenzar, <br>
    tu codigo para terminar de activar </br>
    tu cuenta es:<h2> CA-001VP </h2> <br></br><br></br><br>
    Por favor no responder a este correo ya que solo </br>
    es de enviar mensaje y no recibir. <br></br><br></br><br></br><br></br><br></br>
    <h3><p>Cannabis Automatico App</p></h3>
    </string>
    <string name="no_tienes_internet_n_comprueba_tu_conexion">No tienes INTERNET \n Comprueba tu conexion.</string>
    <string name="iniciar_app">Guardar usuario al\niniciar la app  \u0020 \u0020 \u0020 \u0020 \u0020 \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="contenido_mensaje">Se le ha enviado un codigo a \nsu correo si no aparece en su \nventana de entrada, busca en \nla carpeta de Spam</string>
    <string name="confirmar">confirmar</string>
    <string name="enviarr">Enviar</string>
    <string name="mensaje_btn">No he recibido el codigo :</string>
    <string name="cannabis_lo_que_hace">Esta aplicacion permite que tus cultivos de cannabis crescan saludable de manera automatica, permitiendote saber todos los datos de acuerdo al estado de la planta, donde de manera automatica la aplicacion cannabis automatico va ir mejorando el estado de acuerdo a lo que necesite la planta de manera facil y agil reduciendo costos y efuerzos</string>
    <string name="creadores">Creado por : \n\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Andres Hurtado\n \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020Miller Olaya</string>
    <string name="atribuciones">
        - Icono de humedad atribuye a Good Ware \n
        - Icono temperatura atribuye a Freepik \n
        - Icono de ph atribuye a Smashicons \n
        - Icono Luz atribuye a Freepik \n
        - Icono de historial atribuye a Freepik \n
        - Icono de calendario atribuye a Smashicons \n
        - Icono de cuenta atribuye a Freepik \n
        - Icono de cuenta atribuye a pixel perfect \n
        - Icono de video camara atribuye a Icon Monk \n
        - Icono de hora atribuye a Freepik \n
        - Icono invernadero atribuye a inipagistudio \n
        - Icono de fecha atribuye a Freepik \n
        - Icono de planta de una hoja Pixel perfect \n
        - Icono de planta de dos hoja Pixel perfect \n
        - Icono de planta de cuatro hojas a dDara
        - Icono de humedad suelo a Smashicons


    </string>
    <string name="sensor_2">sensor 2</string>
    <string name="sensor_3">sensor 3</string>
    <string name="sensor_1">sensor 1</string>

    <string name="mandatory"> Error campo vacio</string>
    <string name="mandatoryemail"> Error email no valido</string>
    <string name="mandatoryPass"> Error, la contraseña no coinciden</string>
    <string name="mandatoryCodigo"> Error, codigo invalido</string>
    <string name="mandatoryUsu"> Error, ya existe el usuario</string>
</resources>
