<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_principal"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/titulo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/titulo_email"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_below="@+id/titulo_email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/ejemplo_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/titulo_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/Codigoo"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/codigo"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_below="@+id/titulo_codigo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/codigoEjem"
        android:inputType="textEmailAddress" />


    <Button
        android:id="@+id/btn_validar"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_below="@+id/codigo"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:background="@drawable/btn_efectos"
        android:text="@string/boton_codigo"
        android:textColor="@color/cannabis_verde" />


</RelativeLayout>