<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_actual"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/flecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_actual" />


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/titulo_login"
        android:textColor="@color/boton_normal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/efectologin"
        android:drawableLeft="@drawable/ico_m"
        android:ems="10"
        android:hint="@string/ejemplo_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/efectologin"
        android:drawableLeft="@drawable/ico_p"
        android:ems="10"
        android:hint="@string/ejemplo_password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <RadioButton
        android:id="@+id/NoCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/no_cerrar_sesion"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/NoCerrarSesion"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_efectos"
        android:text="@string/btn_iniciar"
        android:textColor="@color/cannabis_verde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoCerrarSesion" />

    <Button
        android:id="@+id/btn_recuperar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="56dp"
        android:text="@string/recuperar_password"
        android:textColor="@color/cannabis_verde"
        app:layout_constraintStart_toEndOf="@+id/btn_iniciar"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textoregistrar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_iniciar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/textoR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_recuperar"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="25dp"
        android:text="@string/btn_registrar"
        android:textColor="@color/cannabis_verde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textoregistrar" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/cargando"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/cargando" />
</androidx.constraintlayout.widget.ConstraintLayout>