<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".F_segundario">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Modo_M"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/sensor_Humed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="10dp"
                android:text="@string/hechar_agua"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBar3"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:max="10"
                android:progress="3" />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/subir_luz"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/encender_luz"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/reducir_luz"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>